--- a/package.json
+++ b/package.json
@@ -4,16 +4,20 @@
   "description": "API BACKEND SISTEMA DE DEPOSITO E INVENTARIO DEL SERVICIO DE DEPOSITO HOSP[ITAL PABLO SORIA.",
   "main": "index.js",
   "scripts": {
+    "start": "node serve.js",
+    "dev": "nodemon serve.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "Quipildor Claudio Angel Ivan",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.3"
   },
   "devDependencies": {
